# parserator

./: .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  make.bat
parserator/: __init__.py  config.py  data_prep_utils.py  main.py  manual_labeling.py  parser_template.py  parser_template.txt  spotcheck.py  training.py  utils.py
tests/: test_manual_labeling.py  test_xml.py
